--- a/silver/src/index.css
+++ b/silver/src/index.css
@@ -6,3 +6,13 @@
     --radius: 0.5rem
   }
 }
+
+@layer base {
+  html {
+    font-family: 'Inter', sans-serif;
+  }
+  
+  body {
+    @apply font-roboto;
+  }
+}
